--- a/pythia.yml
+++ b/pythia.yml
@@ -24,5 +24,5 @@ site:
     - title: Community
       url: https://projectpythia.org/index.html#join-us
   actions:
-    - title: Pythia Project
+    - title: Project Pythia
       url: https://projectpythia.org
