--- a/pythia.yml
+++ b/pythia.yml
@@ -9,7 +9,7 @@ project:
 site:
   template: book-theme
   options:
-    # favicon: favicon.ico
+    favicon: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/favicon.ico
     logo: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/pythia_logo-white-rtext-blue.svg
     logo_dark: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/pythia_logo-white-rtext.svg
   nav:
