add footer.css to pythia.yml

--- a/pythia.yml
+++ b/pythia.yml
@@ -18,6 +18,7 @@ site:
     favicon: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/favicon.ico
     logo: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext-blue.svg
     logo_dark: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext.svg
+    style: ./css/footer.css
   nav:
     - title: Home
       url: https://projectpythia-mystmd.github.io
