--- a/pythia.yml
+++ b/pythia.yml
@@ -18,7 +18,6 @@ site:
     favicon: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/favicon.ico
     logo: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext-blue.svg
     logo_dark: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext.svg
-    style: ./css/footer.css
   nav:
     - title: Home
       url: https://projectpythia-mystmd.github.io
@@ -35,4 +34,36 @@ site:
       url: https://projectpythia-mystmd.github.io
 
   parts:
-    footer: footer.md
+    footer: |
+      "
+        :::::{grid} 3
+        :class: items-center
+
+
+        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/NSF-NCAR.png
+        :alt: NCAR Logo
+        ```
+
+        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/NSF-Unidata.png
+        :alt: Unidata Logo
+        ```
+
+        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/UAlbany.svg
+        :alt: UAlbany Logo
+        ```
+        :::::
+
+
+        :::::{div}
+        :class: flex items-center gap-4
+
+        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/nsf.jpg
+        :alt: NSF Logo
+        :height: 60px
+        ```
+
+        <span style="font-size: 0.9em; line-height: 1.4;">
+          This material is based upon work supported by the National Science Foundation under Grant Nos. 2026863 and 2026899. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
+        </span>
+        :::::
+      "
