--- a/pythia.yml
+++ b/pythia.yml
@@ -5,7 +5,7 @@ project:
     content: Apache-2.0
     code: CC-BY-4.0
   references:
-    foundations: https://projectpythia-mystmd.github.io/pythia-foundations
+    foundations: https://foundations.projectpythia.org
     xarray: https://docs.xarray.dev/en/stable/
     matplotlib: https://matplotlib.org/stable/
   jupyter:
@@ -15,23 +15,23 @@ project:
 site:
   template: book-theme
   options:
-    favicon: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/favicon.ico
-    logo: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext-blue.svg
-    logo_dark: https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/pythia_logo-white-rtext.svg
+    favicon: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/favicon.ico
+    logo: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/pythia_logo-white-rtext-blue.svg
+    logo_dark: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/pythia_logo-white-rtext.svg
   nav:
     - title: Home
-      url: https://projectpythia-mystmd.github.io
+      url: https://projectpythia.org
     - title: Foundations
-      url: https://projectpythia-mystmd.github.io/pythia-foundations
+      url: https://foundations.projectpythia.org
     - title: Cookbooks
-      url: https://projectpythia-mystmd.github.io/cookbook-gallery
+      url: https://https://cookbooks.projectpythia.org/
     - title: Resources
-      url: https://projectpythia-mystmd.github.io/resource-gallery
+      url: https://https://projectpythia.org/resource-gallery.html
     - title: Community
-      url: https://projectpythia-mystmd.github.io/#join-us
+      url: https://projectpythia.org/#join-us
   actions:
     - title: Project Pythia
-      url: https://projectpythia-mystmd.github.io
+      url: https://projectpythia.org
 
   parts:
     footer: |
@@ -39,15 +39,15 @@ site:
         :class: items-center
 
 
-        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/NSF-NCAR.png
+        ```{image} https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/NSF-NCAR.png
         :alt: NCAR Logo
         ```
 
-        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/NSF-Unidata.png
+        ```{image} https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/NSF-Unidata.png
         :alt: Unidata Logo
         ```
 
-        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/UAlbany.svg
+        ```{image} https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/UAlbany.svg
         :alt: UAlbany Logo
         ```
         :::::
@@ -55,7 +55,7 @@ site:
         :::::{div}
         :class: flex items-center gap-4 text-disclaimer
 
-        ```{image} https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/logos/nsf.jpg
+        ```{image} https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/nsf.jpg
         :alt: NSF Logo
         :height: 60px
         ```
