Fix navbar links

--- a/pythia.yml
+++ b/pythia.yml
@@ -24,9 +24,9 @@ site:
     - title: Foundations
       url: https://foundations.projectpythia.org
     - title: Cookbooks
-      url: https://https://cookbooks.projectpythia.org/
+      url: https://cookbooks.projectpythia.org/
     - title: Resources
-      url: https://https://projectpythia.org/resource-gallery.html
+      url: https://projectpythia.org/resource-gallery.html
     - title: Community
       url: https://projectpythia.org/#join-us
   actions:
