--- a/pythia.yml
+++ b/pythia.yml
@@ -12,7 +12,7 @@ project:
     binder:
       url: https://binder.projectpythia.org/
   contributors:
-    - name: Brian Rose
+    - name: Brian E. J. Rose
       id: brian-rose
       orcid: 0000-0002-9961-3821
     - name: John Clyne
