--- a/pythia.yml
+++ b/pythia.yml
@@ -36,6 +36,7 @@ site:
     favicon: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/favicon.ico
     logo: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/pythia_logo-white-rtext-blue.svg
     logo_dark: https://raw.githubusercontent.com/ProjectPythia/pythia-config/main/logos/pythia_logo-white-rtext.svg
+    logo_url: https://projectpythia.org
   nav:
     - title: Home
       url: https://projectpythia.org
