--- a/pythia.yml
+++ b/pythia.yml
@@ -107,7 +107,7 @@ project:
       url: https://www.albany.edu/daes
     - id: CISL
       name: NSF National Center for Atmospheric Research 
-      department: Computational Information Systems Lab.
+      department: Computational and Information Systems Lab.
     - id: Unidata
       name: NSF Unidata
     - id: Argonne
